# 2143_F24_OOP

./: .gitignore  README.md
Assignment/: main
Assignment/02-A02/: README.md
Assignment/03-A03/: README.md
Assignment/04-A04/: README.md
Assignment/05-A05/: README.md
Assignment/06-P01/: README.md  main.cpp  output.txt
Assignment/08-P02B/: README.md
Assignment/08-P02C/: README.md
Assignment/08-P02C/KnuckleBones/: CMakeLists.txt  Game.cpp  Game.hpp  Grid.cpp  Player.hpp  ScoreManager.hpp
Assignment/08-P02C/Knucklebone_ncurces/: knucklebones_game.cpp
Assignment/10-P03/: README.md
Assignment/10-P03/KnuckleBones/: Button.cpp  Button.hpp  Dice.cpp  Dice.hpp  Game.cpp  Game.hpp  Grid.hpp  Player.cpp  ScoreManager.cpp
Assignment/P02A/: README.md
Test/: Test.py
